<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_explore"
        />

    <item
        android:id="@+id/business"
        android:title="@string/business"
        android:icon="@drawable/ic_business"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favorite"
        />


    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"


        />



</menu>
