<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/explore">

    <fragment
        android:id="@+id/explore"
        android:name="com.example.bigwigg.Fragment.ExploreFragment"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/business"
        android:name="com.example.bigwigg.Fragment.FavouriteFragment"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/favourite"
        android:name="com.example.bigwigg.Fragment.FavouriteFragment"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/notification"
        android:name="com.example.bigwigg.Fragment.FavouriteFragment"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.bigwigg.Fragment.BusinessFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.bigwigg.Fragment.BusinessFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/bottom_home"
        android:name="com.example.bigwigg.Fragment.BusinessFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/bottom_dashboard"
        android:name="com.example.bigwigg.Fragment.BusinessFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/bottom_notifications"
        android:name="com.example.bigwigg.Fragment.BusinessFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_business" />
</navigation>